# patch-match-core

./: .travis.yml  CMakeLists.txt  README.md
include/patch_match_core/: patch_matcher.h
test/patch_match_core/: test_patch_matcher.cpp
